Version 3.9.20
- Fixed some parsing problems with inline assembly
- Fixed incorrect inlining of some functions in -O2

Version 3.9.19
- Fixed problems with path searches
- Fixed HEAPSIZE constant to work properly
- Added short form of lambda expressions to BASIC
- Added OPTION IMPLICIT and OPTION EXPLICIT to BASIC

Version 3.9.18
- Improved BASIC parser to permit more complex expressions
- Support getword and getbyte instructions in inline assembly
- Added INPUT, DATA, READ, and RESTORE commands to BASIC
- Added GOSUB support to BASIC (can only GOSUB to a local label)
- Added SQR and INT to BASIC
- Added some more C library functions
- Added PUB FILE and PRI FILE to Spin
- Added PINLO, PINHI, PINSET, PINTOGGLE functions to BASIC
- Increased default heap size to 4K for P2
- Improved assembly speed when large data structures are included.
- Fixed a bug in looking for files when multiple .. are given
- Fixed <> operator in BASIC
- Fixed array indexing with floats (they need to be converted to int)
- Fixed setbyte/setword/setnib abbreviations
- Improved error handling

Version 3.9.17
- Fixed a serious unsigned / unsigned division bug
- Fixed indirect calls involving structure members
- Fixed promotion of word and byte arguments to functions
- Fixed a typo in the printf code for handling width
- Fixed catch/throw/setjmp/longjmp to correctly restore local variables
- Accept line numbers in BASIC programs
- Added <sys/p2_clock.h> for calculating P2 clock frequency
- Changed location of _clkfreq and _clkmode variables on P2 to match TAQOZ

Version 3.9.16
- Check environment variable FLEXCC_INCLUDE_PATH for included files
- Better relative path finding for include files thanks to David Betz
- Added register keyword for C
- Moved P2 CLKFREQ and CLKMODE longs down to initial hub memory; fixes a memory corruption issue with coginit/cognew
- Implemented struct initialization for C
- Implemented initializing function pointers
- Implemented __builtin_cogstart in C