@@ -1,4 +1,5 @@
 Version 3.9.20
+- Allow closures to access variables and functions in the enclosing object
 - Fixed some parsing problems with inline assembly
 - Fixed incorrect inlining of some functions in -O2
 
